# surge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json
.github/workflows/: container.yml  docs.yml  publish-surge-client.yml
demo/: README.md
demo/common/: Cargo.toml
demo/common/src/: lib.rs
demo/embedded/: Cargo.toml
demo/embedded/src/: main.rs
demo/served/: Cargo.toml
demo/served/src/: main.rs
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: errors.md
docs/api/browser/: flow-complete.md  flow-init.md  logout.md  register.md  whoami.md
docs/api/service/: authenticate.md  identity-crud.md  register.md  session-revoke.md  session-verify.md
docs/deployment/: docker.md  environment.md  health-checks.md
docs/features/: audit-logging.md  cors.md  identity-management.md  login-flows.md  password-authentication.md  rate-limiting.md  second-factors.md  service-authentication.md  session-management.md
docs/guide/: architecture.md  introduction.md  quickstart.md
docs/integration/: configuration.md  embedding.md  hydra-oauth-bridge.md  migration.md  registration-modes.md  running-as-server.md  surge-client.md  test-provider.md
docs/public/: CNAME
docs/reference/: changelog.md  cli.md  grants.md  tokens.md
surge/: Cargo.toml
surge-engine/: Cargo.toml
surge-engine/migrations/00000000000001_create_surge_schema/: down.sql  up.sql
surge-engine/migrations/00000000000002_add_factors/: down.sql  up.sql
surge-engine/migrations/00000000000003_passphrase_confirm/: down.sql  up.sql
surge-engine/src/: audit.rs  counter.rs  credential.rs  crypto.rs  factor.rs  flow.rs  identity.rs  lib.rs  models.rs  rate_limit.rs  schema.rs  service.rs  session.rs
surge-engine/src/types/: error.rs  id.rs  mod.rs  password.rs  token.rs  username.rs
surge-server/: Cargo.toml
surge-server/src/: config.rs  lib.rs  main.rs
surge-server/src/api/: browser.rs  error.rs  middleware.rs  mod.rs  service.rs  service_v1.rs  service_v2.rs
surge-server/src/cli/: identity_cmd.rs  mod.rs  serve_cmd.rs  svc_cmd.rs
surge-server/tests/: cross_version_canary.rs  login_return_to_optional.rs  second_factors.rs
surge/src/: embedded.rs  extract.rs  hydra.rs  lib.rs  remote.rs  test_provider.rs  traits.rs
surge/src/router/: browser.rs  cookie.rs  cors.rs  csrf.rs  error.rs  mod.rs  oauth_bridge.rs  rate_limit.rs
