[workspace]
resolver = "2"
members = ["surge-engine", "surge", "surge-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
base62 = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
deadpool = "0.12"
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = "2.2"
futures-util = { version = "0.3", features = ["std", "sink", "async-await", "async-await-macro"] }
hex = "0.4"
http = "1"
hyper = "1"
moka = { version = "0.12", features = ["future"] }
password-hash = "0.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
zeroize = "1"
