[package]
name = "surge-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base62.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
deadpool.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures-util.workspace = true
diesel_migrations.workspace = true
hex.workspace = true
hkdf.workspace = true
password-hash.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
totp-rs.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
