[package]
name = "surge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
embedded = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
http.workspace = true
moka.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

surge-engine = { path = "../surge-engine" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
