[package]
name = "surge-demo-served"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
secrecy.workspace = true
surge = { path = "../../surge" }
surge-demo-common = { path = "../common" }
tokio.workspace = true
url.workspace = true
